# twzrd-trust

./: LICENSE  README.md  SKILL.md  glama.json
eliza-plugin/: README.md  package-lock.json  package.json  tsconfig.test.json
eliza-plugin/src/: client-factory.ts  client.ts  index.ts  intel-helpers.ts  paying-fetch.ts
eliza-plugin/src/actions/: claim.ts  earn.ts  infer.ts  intel-preflight.ts  intel-trust.ts  report.ts  rewards.ts  verify-receipt.ts
eliza-plugin/test/: earn-e2e.ts  plugin-registration.intel.ts
plugin-trustgate/: README.md  package.json  tsconfig.json
plugin-trustgate/examples/: first-installer.ts
plugin-trustgate/src/: gate.ts  index.ts  provider.ts
plugin-trustgate/test/: gate.live.test.ts  gate.test.ts
server/: Dockerfile  agent-card.md  llms.txt
server/.well-known/: mcp.json
twzrd-mcp-server/: README.md  package.json  pyproject.toml
twzrd-mcp-server/py/: twzrd_mcp.py
twzrd-mcp-server/src/: index.ts
twzrd-x402-gate/: README.md  package.json  tsconfig.json
twzrd-x402-gate/examples/: clawrouter-gate.ts
twzrd-x402-gate/src/: config.ts  gate.ts  index.ts  mcp-hook.ts  payto.ts  policy.ts  types.ts  wrap-fetch.ts
twzrd-x402-gate/test/: clawrouter-contract.test.ts  mcp-hook.test.ts  policy.test.ts  wrap-fetch.test.ts
